# fibonacci

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
benchmarks/: fibonacci.benchmark.cpp
cmake/: FindPaptools.cmake  FindPathInst.cmake
include/fibonacci/: fibonacci.h
src/: fibonacci.cpp
tests/: fibonacci.test.cpp
